manifests/medicines-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medicines-api
  labels:
    istio-injection: enabled
