manifests/medicines-api/base/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: medicines-api-deny
  namespace: medicines-api
spec:
  selector:
    matchLabels:
      app: medicines-api
  action: DENY
  rules:
    - to:
        - operation:
            notPaths:
              - "/healthz"
      from:
        - source:
            notPrincipals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-internal-service-account
